--- a/shubham.html
+++ b/shubham.html
@@ -15,7 +15,7 @@
     </table>
 
     <hr>
-    <p>September 22,2018 is one of the most amzing day of my life and you very well know the reason.  </p>
+    <p>September 22,2018 is one of the most amazing day of my life and you very well know the reason.  </p>
     <p>You wanted the Jaipur pictires of us. I thought why not to give it in a diffferent way.So click the below links for the pictures.</p>
     <p>The quality of photos will be bad so i will u photos again but still you can checkout these links.</p>
     <table>
